Update action-bar and display-action styles to work together, fixed input and field spacing inside previous elements, add footer_links object and loop, remove empty header_sets file

--- a/khyeras/_dev/styles/khyeras_v1/template/header_links.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/header_links.html
@@ -1,5 +1,5 @@
 {% set headerlinks = {
-	Announcements: {
+	'Announcements': {
 		link01: {
 			name: 'Freed from Bhelests nightmares and undead legions, the realm of Khy\'eras',
 			url:  '//www.google.com'
@@ -13,7 +13,7 @@
 			url:  '//www.google.com'
 		}
 	},
-	Events: {
+	'Events': {
 		link04: {
 			name: 'Event #01',
 			url:  '//www.google.com'
