--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -9,6 +9,11 @@
 				<div class="wrapper">
 					<div class="flex-row flex-row-20">
 						<div class="flex-column">
+							<h4>Random Content Goes Here</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
+						</div>
+						<!-- INCLUDE footer_links.html -->
+						<div class="flex-column has-copyright">
 							<p>Freed from Bhelest's nightmares, the realm of Khy'eras unveiled vast reaches perfect for exploration. Create a character and unlock the land's secrets. Original high fantasy RPG with no word count.</p>
 							<p>
 								<a class="button-link" href="//rpgrating.com" target="_blank">
@@ -24,58 +29,7 @@
 								<!-- EVENT overall_footer_copyright_append -->
 								<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 							</p>
-						</div>
-						<div class="flex-column">
-							<h4>Random Content Goes Here</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
-						</div>
-						<div class="flex-column">
-							<h4>Listed At</h4>
-							<div class="button-wrapper">
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-							</div>
-							<h4>Affiliates</h4>
-							<div class="button-wrapper">
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-								<a class="button-link" href="//google.com" target="_blank">
-									<img src="//via.placeholder.com/88x31" alt="Affiliate Site Name" title="Affiliate Site Name" />
-								</a>
-							</div>
-						</div>
+						</div>						
 					</div>
 					<p class="bottom-line">
 						<!-- EVENT overall_footer_timezone_before -->
