--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -123,7 +123,7 @@ input[type='search']::-webkit-search-cancel-button {
 fieldset.submit-buttons {
 	text-align: center;
 	margin: 0 0 $ffs-minus 0;
-	.button1, .button2, .button3 {
+	.button, .button1, .button2 {
 		margin-bottom: $ffs;
 	}
 }
