--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -22,26 +22,6 @@
 	.author {
 		font-size: rem(13px);
 	}
-	.post-notice {
-		background: $color-09;
-		padding: 10px;
-		border-radius: 3px;
-		&, a {
-			color: $color-08
-		}
-		a:hover {
-			color: $color-07;
-		}
-		&.reported {
-			background: mix(white, $color-11, 80%);
-		}
-		&.unapproved {
-			background: mix(white, $color-07, 60%);
-			.icon-red {
-				color: $color-07;
-			}
-		}
-	}
 	.content {
 		margin: 0 0 20px 0;
 	}
@@ -49,6 +29,30 @@
 		border-top: 1px dashed $color-04;
 		margin: 30px 0 20px 0;
 		padding: 30px 0 0 0;
+	}
+}
+
+/* View Topic - Body - Post Notice
+========================================================================== */
+
+.postbody .post-notice {
+	background: $color-09;
+	padding: 10px;
+	border-radius: 3px;
+	&, a {
+		color: $color-08
+	}
+	a:hover {
+		color: $color-07;
+	}
+	&.reported {
+		background: mix(white, $color-11, 80%);
+	}
+	&.unapproved {
+		background: mix(white, $color-07, 60%);
+		.icon-red {
+			color: $color-07;
+		}
 	}
 }
 
