--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -727,15 +727,18 @@
 		display: block;
 		width: auto;
 	}
-	#display-panel dl dd {
-		select {
-			width: auto;
-			&#sk {
-				margin: 0 $ffs;
-			}
+	#display-panel dl dd select#st {
+		& ~ label, & ~ .button2 {
+			margin: $ffs 0 0 0;
 		}
-		label {
-			margin: 0;
+		& ~ label select {
+			width: auto;
+		}
+		& + label {
+			margin-left: -8px;
+			& + label {
+				margin-left: $ffs;
+			}
 		}
 	}
 }
